Fixed wrong font color when dark theme was on

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 	--color-bg-secondary: #f9fafb;
 	--color-bg-button: #ef4444;
 	--color-text-primary: #131313
-	--color-text-button: white;
+	--color-text-button: #fafafa;
 	--color-text-secondary: #6b7280;
 	--color-text-accent: #b91c1c;
 	--color-text-dark: #161616;
